--- a/Website/Views/Shared/UserPostView.cshtml
+++ b/Website/Views/Shared/UserPostView.cshtml
@@ -1,28 +1,47 @@
 ﻿@model Database.DAL.Entities.UserPost
 @using static Website.Infrastructure.Converters.TimeOfAdditionConverter
+@using Website.Infrastructure.Extensions
+@{
+    bool isOwner = Context.GetConnectedUserId()==Model.OwnerId.ToString();
+}
 <li id="post-@Model.Id" class="post" data-post-id="@Model.Id">
     <div class="post_quick_menu">
-        <div class="quick_btn edit_post_btn">
-            <div class="quick_btn_icon">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M 18.414062 2 C 18.158188 2 17.902031 2.0974687 17.707031 2.2929688 L 16 4 L 20 8 L 21.707031 6.2929688 C 22.098031 5.9019687 22.098031 5.2689063 21.707031 4.8789062 L 19.121094 2.2929688 C 18.925594 2.0974687 18.669937 2 18.414062 2 z M 14.5 5.5 L 3 17 L 3 21 L 7 21 L 18.5 9.5 L 14.5 5.5 z">
-                    </path>
-                </svg>
-                @*<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        @if (isOwner)
+        {
+            <div class="quick_btn edit_post_btn">
+                <div class="quick_btn_icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M 18.414062 2 C 18.158188 2 17.902031 2.0974687 17.707031 2.2929688 L 16 4 L 20 8 L 21.707031 6.2929688 C 22.098031 5.9019687 22.098031 5.2689063 21.707031 4.8789062 L 19.121094 2.2929688 C 18.925594 2.0974687 18.669937 2 18.414062 2 z M 14.5 5.5 L 3 17 L 3 21 L 7 21 L 18.5 9.5 L 14.5 5.5 z">
+                        </path>
+                    </svg>
+                    <span class="tooltip">Отредактировать запись</span>
+                    @*<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path d="M 4.9902344 3.9902344 A 1.0001 1.0001 0 0 0 4.2929688 5.7070312 L 10.585938 12 L 4.2пш929688 18.292969 A 1.0001 1.0001 0 1 0 5.7070312 19.707031 L 12 13.414062 L 18.292969 19.707031 A 1.0001 1.0001 0 1 0 19.707031 18.292969 L 13.414062 12 L 19.707031 5.7070312 A 1.0001 1.0001 0 0 0 18.980469 3.9902344 A 1.0001 1.0001 0 0 0 18.292969 4.2929688 L 12 10.585938 L 5.7070312 4.2929688 A 1.0001 1.0001 0 0 0 4.9902344 3.9902344 z">
                         </path>
                     </svg>*@
+                </div>
             </div>
-        </div>
-        <div class="quick_btn">
-            <div class="quick_btn_icon">
-                @*<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 98 98" style="fill: antiquewhite;/*! stroke: black; *//*! stroke-width: 3; */"><g data-name="<Group>"><path d="M74.3,33.7,70,79a8,8,0,0,1-8,7.2H36.8a8,8,0,0,1-7.9-7.1L23.7,33.7Z" data-name="<Group>" fill=""></path><g data-name="<Group>"><g data-name="<Group>"><path d="M62,88.2H36.8a10,10,0,0,1-9.9-8.9L21.7,33.9a1.7,1.7,0,0,1,.5-1.5,1.8,1.8,0,0,1,1.5-.7H74.3a1.8,1.8,0,0,1,1.5.7,2,2,0,0,1,.5,1.5L72,79.1A10,10,0,0,1,62,88.2ZM25.9,35.7l5,43.2a6,6,0,0,0,5.9,5.3H62a6,6,0,0,0,6-5.4l4.1-43.1Z" data-name="<Compound Path>"></path></g><path d="M81.6,19H61V15.8A5.6,5.6,0,0,0,55.3,10H42.7A5.6,5.6,0,0,0,37,15.8V19H16.4a2,2,0,1,0,0,4H81.6a2,2,0,0,0,0-4ZM41,19V15.8A1.6,1.6,0,0,1,42.7,14H55.3A1.6,1.6,0,0,1,57,15.8V19Z" data-name="<Compound Path>" fill=""></path></g></g></svg>*@
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
-                    <path d="M 7 4 C 6.744125 4 6.4879687 4.0974687 6.2929688 4.2929688 L 4.2929688 6.2929688 C 3.9019687 6.6839688 3.9019687 7.3170313 4.2929688 7.7070312 L 11.585938 15 L 4.2929688 22.292969 C 3.9019687 22.683969 3.9019687 23.317031 4.2929688 23.707031 L 6.2929688 25.707031 C 6.6839688 26.098031 7.3170313 26.098031 7.7070312 25.707031 L 15 18.414062 L 22.292969 25.707031 C 22.682969 26.098031 23.317031 26.098031 23.707031 25.707031 L 25.707031 23.707031 C 26.098031 23.316031 26.098031 22.682969 25.707031 22.292969 L 18.414062 15 L 25.707031 7.7070312 C 26.098031 7.3170312 26.098031 6.6829688 25.707031 6.2929688 L 23.707031 4.2929688 C 23.316031 3.9019687 22.682969 3.9019687 22.292969 4.2929688 L 15 11.585938 L 7.7070312 4.2929688 C 7.5115312 4.0974687 7.255875 4 7 4 z">
-                    </path>
-                </svg>
+            <div class="quick_btn">
+                <div class="quick_btn_icon">
+                    @*<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 98 98" style="fill: antiquewhite;/*! stroke: black; *//*! stroke-width: 3; */"><g data-name="<Group>"><path d="M74.3,33.7,70,79a8,8,0,0,1-8,7.2H36.8a8,8,0,0,1-7.9-7.1L23.7,33.7Z" data-name="<Group>" fill=""></path><g data-name="<Group>"><g data-name="<Group>"><path d="M62,88.2H36.8a10,10,0,0,1-9.9-8.9L21.7,33.9a1.7,1.7,0,0,1,.5-1.5,1.8,1.8,0,0,1,1.5-.7H74.3a1.8,1.8,0,0,1,1.5.7,2,2,0,0,1,.5,1.5L72,79.1A10,10,0,0,1,62,88.2ZM25.9,35.7l5,43.2a6,6,0,0,0,5.9,5.3H62a6,6,0,0,0,6-5.4l4.1-43.1Z" data-name="<Compound Path>"></path></g><path d="M81.6,19H61V15.8A5.6,5.6,0,0,0,55.3,10H42.7A5.6,5.6,0,0,0,37,15.8V19H16.4a2,2,0,1,0,0,4H81.6a2,2,0,0,0,0-4ZM41,19V15.8A1.6,1.6,0,0,1,42.7,14H55.3A1.6,1.6,0,0,1,57,15.8V19Z" data-name="<Compound Path>" fill=""></path></g></g></svg>*@
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                        <path d="M 7 4 C 6.744125 4 6.4879687 4.0974687 6.2929688 4.2929688 L 4.2929688 6.2929688 C 3.9019687 6.6839688 3.9019687 7.3170313 4.2929688 7.7070312 L 11.585938 15 L 4.2929688 22.292969 C 3.9019687 22.683969 3.9019687 23.317031 4.2929688 23.707031 L 6.2929688 25.707031 C 6.6839688 26.098031 7.3170313 26.098031 7.7070312 25.707031 L 15 18.414062 L 22.292969 25.707031 C 22.682969 26.098031 23.317031 26.098031 23.707031 25.707031 L 25.707031 23.707031 C 26.098031 23.316031 26.098031 22.682969 25.707031 22.292969 L 18.414062 15 L 25.707031 7.7070312 C 26.098031 7.3170312 26.098031 6.6829688 25.707031 6.2929688 L 23.707031 4.2929688 C 23.316031 3.9019687 22.682969 3.9019687 22.292969 4.2929688 L 15 11.585938 L 7.7070312 4.2929688 C 7.5115312 4.0974687 7.255875 4 7 4 z">
+                        </path>
+                    </svg>
+                    <span class="tooltip">Удалить запись</span>
+                </div>
             </div>
-        </div>
+        }
+        else
+        {
+            <div class="quick_btn report_btn">
+                <div class="quick_btn_icon">
+                    @*<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 98 98" style="fill: antiquewhite;/*! stroke: black; *//*! stroke-width: 3; */"><g data-name="<Group>"><path d="M74.3,33.7,70,79a8,8,0,0,1-8,7.2H36.8a8,8,0,0,1-7.9-7.1L23.7,33.7Z" data-name="<Group>" fill=""></path><g data-name="<Group>"><g data-name="<Group>"><path d="M62,88.2H36.8a10,10,0,0,1-9.9-8.9L21.7,33.9a1.7,1.7,0,0,1,.5-1.5,1.8,1.8,0,0,1,1.5-.7H74.3a1.8,1.8,0,0,1,1.5.7,2,2,0,0,1,.5,1.5L72,79.1A10,10,0,0,1,62,88.2ZM25.9,35.7l5,43.2a6,6,0,0,0,5.9,5.3H62a6,6,0,0,0,6-5.4l4.1-43.1Z" data-name="<Compound Path>"></path></g><path d="M81.6,19H61V15.8A5.6,5.6,0,0,0,55.3,10H42.7A5.6,5.6,0,0,0,37,15.8V19H16.4a2,2,0,1,0,0,4H81.6a2,2,0,0,0,0-4ZM41,19V15.8A1.6,1.6,0,0,1,42.7,14H55.3A1.6,1.6,0,0,1,57,15.8V19Z" data-name="<Compound Path>" fill=""></path></g></g></svg>*@
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30"><path d="M 14.980469 1.9902344 A 1.0001 1.0001 0 0 0 14.292969 2.2929688 L 9.2929688 7.2929688 A 1.0001 1.0001 0 1 0 10.707031 8.7070312 L 15.707031 3.7070312 A 1.0001 1.0001 0 0 0 14.980469 1.9902344 z M 17 5 L 12 10 C 12 10 13.268078 11.887981 14.292969 13.167969 C 12.646434 14.60682 4.0618108 22.110064 3.5859375 22.585938 C 2.8049375 23.366937 2.8049375 24.633062 3.5859375 25.414062 C 4.3669375 26.195062 5.6330625 26.195063 6.4140625 25.414062 C 6.8899358 24.938189 14.39318 16.353566 15.832031 14.707031 C 17.112019 15.731922 19 17 19 17 L 24 12 C 24 12 22 9 21 8 C 20 7 17 5 17 5 z M 25.980469 12.990234 A 1.0001 1.0001 0 0 0 25.292969 13.292969 L 20.292969 18.292969 A 1.0001 1.0001 0 1 0 21.707031 19.707031 L 26.707031 14.707031 A 1.0001 1.0001 0 0 0 25.980469 12.990234 z M 15 25 A 1.0001 1.0001 0 1 0 15 27 L 26 27 A 1.0001 1.0001 0 1 0 26 25 L 15 25 z"></path></svg>
+                </div>
+                <span class="tooltip">Пожаловаться на запись</span>
+            </div>
+        }
         @*<div class="quick_btn">
             </div>*@
     </div>
