--- a/Website/wwwroot/Resources/css/chats.css
+++ b/Website/wwwroot/Resources/css/chats.css
@@ -1,14 +1,4 @@
-﻿:root {
-    --light-main-background-color: rgba(242,242,242,1);
-}
-*{
-	/*font-family: 'Nunito', sans-serif;*/
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-}
-
-.chats {
+﻿.chats {
     margin: 0;
     margin-top: 10px;
     padding: 0;
