--- a/Website/wwwroot/Resources/css/post.css
+++ b/Website/wwwroot/Resources/css/post.css
@@ -42,15 +42,15 @@
     opacity: .5;
     padding-bottom: 6px;
 }
-.post:hover .post_time {
+/*.post:hover .post_time {
     opacity: .5;
     padding-bottom: 6px;
-}
+}*/
 .post_title {
     margin-bottom: 6px;
 }
 .post:hover .post_quick_menu {
-    opacity: .5;
+    opacity: 1;
     top: 10px;
 }
 .post_quick_menu {
@@ -71,6 +71,7 @@
     height: 20px;
     width: 20px;
     cursor: pointer;
+    display: flex;
 }
 .quick_btn:hover{
 
@@ -88,4 +89,11 @@
 .hidden{
     visibility: collapse;
     opacity:0;
+}
+
+
+.quick_btn:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+    transition: .3s linear;
 }
