--- a/Website/wwwroot/Resources/css/style.css
+++ b/Website/wwwroot/Resources/css/style.css
@@ -1,4 +1,3 @@
-
 :root {
     --header-height: 50px;
     --left-menu-row-height: 40px;
@@ -11,8 +10,15 @@
     --field-hover-dark-color: rgb(180, 180, 180);
     --border-hover-gray-color: rgb(220, 220, 220);
     --field-focus-dark-color: rgb(136, 136, 136);
+    --light-main-background-color: rgba(242,242,242,1);
 }
-* {font-family: 'Nunito', sans-serif; }
+* {
+    /*font-family: 'Nunito', sans-serif;*/
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
+}
 html {
     height: 100%;
 }
@@ -242,16 +248,6 @@ a {
 }
 #im_dialogs_search:focus{
     border-color: var(--field-focus-dark-color);
-}
-.ui_control_item{
-    border-radius: 12px;
-    height: 40px;
-    width: 40px;
-    background: rgba(230,230,230,.7);
-    color:var(--font-dark-color);
-    cursor: pointer;
-    border: 1px transparent solid;
-    transition: .2s linear;
 }
 .ui_control_item:hover{
     border-color: var(--field-hover-dark-color);
