--- a/Website/Views/Reports/ReportView.cshtml
+++ b/Website/Views/Reports/ReportView.cshtml
@@ -30,8 +30,6 @@
                 @Model.Commentary
             </div>
         </div>
-        <div>
-
-        </div>
+        <button class="report_close">Закрыть</button>
     </div>
 </li>
