--- a/Website/Views/Messenger/Base/ChatView.cshtml
+++ b/Website/Views/Messenger/Base/ChatView.cshtml
@@ -29,7 +29,7 @@ else
         return child;
     };
 
-    window.scrollTo(0, document.body.scrollHeight);
+    document.getElementById('history').scrollTo(0, document.getElementById('history').scrollHeight);
 
     var testList;
     var privateconnection;
