--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -172,7 +172,7 @@
     @*<script src="~/Resources/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
     <script src="~/Resources/js/index.js"></script>
     <script src="~/Resources/js/modal.js"></script>
-    <script src="~/Resources/js/site.js" asp-append-version="true"></script>
+    @*<script src="~/Resources/js/site.js" asp-append-version="true"></script>*@
     @*@await RenderSectionAsync("Scripts", required: false)*@
 </body>
 </html>
