--- a/Website/Views/Messenger/Base/ChatPreview.cshtml
+++ b/Website/Views/Messenger/Base/ChatPreview.cshtml
@@ -15,7 +15,7 @@
         History = Model.GetHistory(),
         ReceiverName = receiver.User.Name,
         ReceiverId = receiver.Id,
-        IsReceiverOnline = SignalRService.GetConnections(receiver.User.Id.ToString()).Any(),
+        IsReceiverOnline = SignalRService.Connections.GetConnections(receiver.User.Id.ToString()).Any(),
         ReceiverAvatarPath = receiver.User.AvatarPath
     };
     if (chat.IsPrivateChat)
