--- a/Website/Views/Profile/Profile.cshtml
+++ b/Website/Views/Profile/Profile.cshtml
@@ -10,10 +10,12 @@
 @*<div style="background: white; height: 70px; z-index: 11; width: inherit; position: fixed;"></div>*@
 <div id="user_profile" class="user_profile">
     <div id="profile_logo" class="profile_logo">
-        
-        <div id="upload_btn" class="upload_btn ui_control_item" style="background-color: #e3e3e3" onclick="Ava()">
-            <svg xmlns="http://www.w3.org/2000/svg" style="width:24px; margin: auto; fill: gray;" viewBox="0 0 24 24"><path d="M 12 2 A 1 1 0 0 0 11.292969 2.2949219 L 6.1601562 7.1347656 A 0.5 0.5 0 0 0 6.1484375 7.1445312 L 6.1464844 7.1464844 A 0.5 0.5 0 0 0 6 7.5 A 0.5 0.5 0 0 0 6.5 8 L 10 8 L 10 16 C 10 16.552 10.448 17 11 17 L 12 17 L 13 17 C 13.552 17 14 16.552 14 16 L 14 8 L 17.5 8 A 0.5 0.5 0 0 0 18 7.5 A 0.5 0.5 0 0 0 17.853516 7.1464844 L 17.822266 7.1171875 L 12.716797 2.3027344 A 1 1 0 0 0 12.683594 2.2714844 A 1 1 0 0 0 12 2 z M 3 20 A 1.0001 1.0001 0 1 0 3 22 L 21 22 A 1.0001 1.0001 0 1 0 21 20 L 3 20 z"></path></svg>
-        </div>
+        @if (Model.IsOwner)
+        {
+            <div id="upload_btn" class="upload_btn ui_control_item" style="background-color: #e3e3e3" onclick="Ava()">
+                <svg xmlns="http://www.w3.org/2000/svg" style="width:24px; margin: auto; fill: gray;" viewBox="0 0 24 24"><path d="M 12 2 A 1 1 0 0 0 11.292969 2.2949219 L 6.1601562 7.1347656 A 0.5 0.5 0 0 0 6.1484375 7.1445312 L 6.1464844 7.1464844 A 0.5 0.5 0 0 0 6 7.5 A 0.5 0.5 0 0 0 6.5 8 L 10 8 L 10 16 C 10 16.552 10.448 17 11 17 L 12 17 L 13 17 C 13.552 17 14 16.552 14 16 L 14 8 L 17.5 8 A 0.5 0.5 0 0 0 18 7.5 A 0.5 0.5 0 0 0 17.853516 7.1464844 L 17.822266 7.1171875 L 12.716797 2.3027344 A 1 1 0 0 0 12.683594 2.2714844 A 1 1 0 0 0 12 2 z M 3 20 A 1.0001 1.0001 0 1 0 3 22 L 21 22 A 1.0001 1.0001 0 1 0 21 20 L 3 20 z"></path></svg>
+            </div>
+        }
         @if (string.IsNullOrWhiteSpace(Model.User.AvatarPath))
         {
             <svg class="profile_img" style="fill:gray" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
