--- a/Website/Views/Profile/Profile.cshtml
+++ b/Website/Views/Profile/Profile.cshtml
@@ -135,7 +135,7 @@
                     <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="20px" height="20px"><path d="M 21 3 C 11.601563 3 4 10.601563 4 20 C 4 29.398438 11.601563 37 21 37 C 24.355469 37 27.460938 36.015625 30.09375 34.34375 L 42.375 46.625 L 46.625 42.375 L 34.5 30.28125 C 36.679688 27.421875 38 23.878906 38 20 C 38 10.601563 30.398438 3 21 3 Z M 21 7 C 28.199219 7 34 12.800781 34 20 C 34 27.199219 28.199219 33 21 33 C 13.800781 33 8 27.199219 8 20 C 8 12.800781 13.800781 7 21 7 Z"></path></svg>
                 </button>*@
         </div>
-        <ul id="profile_posts_container">
+        <ul id="profile_posts_container" class="profile_posts">
             @{
                 Html.RenderPartial("PostsView", Model.UserPosts);
             }
@@ -143,6 +143,7 @@
     </div>
 </div>
 
+<script src="~/Resources/lib/jquery/dist/jquery.min.js"></script>
 <script>
 
     //------------------------
@@ -218,6 +219,7 @@
         }
     }
     searchPostsOnInput('ui_posts_search_input', 'profile_posts_container');
+
     loadReportBtn();
 
 
@@ -294,12 +296,12 @@
             });
         }
     }
-    openCreatePostModalForm('open_post_sumbit_form', 'page_modal_wrap');
+    //openCreatePostModalForm('open_post_sumbit_form', 'page_modal_wrap');
 
     function ScrollUp() {
         window.scrollTo({ top: 0, behavior: 'smooth' });
     }
-    @*let openEditPostModalForm = (inputId, containerId) => {
+    let openEditPostModalForm = (inputId, containerId) => {
         let input = document.getElementById(inputId);
         let resultContainer = document.getElementById(containerId);
         let request;
@@ -320,7 +322,7 @@
                 });
             });
         }
-    }*@
+    }
     openCreatePostModalForm('open_post_sumbit_form', 'page_modal_wrap');
 
     let editPost = (inputId, containerId, wrapId, postId) => {
@@ -496,6 +498,45 @@
         window.scrollTo({ top: 0, behavior: 'smooth' });
     }
 
+    $(document).ready(function() {
+        var url = "@Url.Action("SearchUserPosts", "Profile")";
+                request = $.ajax({
+                    url: url,
+                    type: "POST",
+                    data: {
+                        "id": @profileId,
+                        "filterText": ""
+                    },
+                    success: function(view) {
+                        document.getElementById('profile_posts_container').innerHTML = view;
+                        loadReportBtn();
+                        document.getElementById('profile_posts_container').querySelectorAll('.edit_post_btn').forEach(btn => btn.addEventListener('click',function() {
+                            var post = btn.offsetParent.offsetParent;
+                            var postId = post.getAttribute('data-post-id');
+                            var ownerId = post.getAttribute('data-owner-id');
+                            var postTitle = post.querySelector('.post_title').innerText;
+                            var postDescription = post.querySelector('.post_description').innerText;
+                            var url = "@Url.Action("CreatePostModalForm", "Modals")";
+                            $.ajax({
+                                url: url,
+                                type: "POST",
+                                data: {
+                                    "Id": postId,
+                                    "OwnerId": ownerId,
+                                    "Title": postTitle,
+                                    "Description": postDescription
+                                },
+                                success: function (view) {
+                                    var wrap = document.getElementById('page_modal_wrap');
+                                    if (wrap.innerText != "")
+                                        return;
+                                    wrap.innerHTML = view;
+                                    editPost('edit_post_btn', 'profile_posts_container', 'page_modal_wrap', postId);
+                                }});
+                        }));
+                    }
+                });
+    });
     //function IsSearchInputEmpty(input) {
     //    var btn = document.getElementById('submit_search');
     //    if (input.value == "")
