--- a/Website/Views/Messenger/Base/MessageView.cshtml
+++ b/Website/Views/Messenger/Base/MessageView.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
 }
-<li id="message-@Model.Id" class="message" data-generated-message-id="@Model.Id">
+<li id="message-@Model.Id" class="message generated_message" data-generated-message-id="@Model.Id">
     <div class="message-content">
         @Model.Text
     </div>
