--- a/Website/Views/Messenger/Base/ChatPreview.cshtml
+++ b/Website/Views/Messenger/Base/ChatPreview.cshtml
@@ -1,24 +1,10 @@
-﻿@using Website.ViewModels.Messenger
-@using Website.Infrastructure.Extensions
-@using Website.Infrastructure.Services.Interfaces
-@inject ISignalRService SignalRService
-@model Database.DAL.Entities.Chats.Base.Chat
+﻿@using Website.ViewModels.Messenger.Preview.Base
+@using Website.ViewModels.Messenger.Preview
+@model Website.ViewModels.Messenger.Preview.Base.ChatPreviewViewModel
 @{
-    int connectedUserId = int.Parse(Context.GetConnectedUserId());
-    var receiver = Model.GetReceiverChatParticipant(connectedUserId);
     Layout = null;
-    ChatViewModel chat = new()
-    {
-        Id = Model.Id,
-        ConnectedUserId = connectedUserId,
-        IsPrivateChat = Model.IsPrivateChat,
-        History = Model.GetHistory(),
-        ReceiverName = receiver.User.Name,
-        ReceiverId = receiver.Id,
-        IsReceiverOnline = SignalRService.Connections.GetConnections(receiver.User.Id.ToString()).Any(),
-        ReceiverAvatarPath = receiver.User.AvatarPath
-    };
-    if (chat.IsPrivateChat)
-        await Html.RenderPartialAsync("PrivateChat/PrivateChatPreview", chat);
-    else await Html.RenderPartialAsync("GroupChat/GroupChatPreview", chat);
+    if (Model is PrivateChatPreviewViewModel privateChatVVM)
+        await Html.RenderPartialAsync("PrivateChat/PrivateChatPreview", privateChatVVM);
+    else if(Model is GroupChatPreviewViewModel groupChatVVM) 
+        await Html.RenderPartialAsync("GroupChat/GroupChatPreview", groupChatVVM);
 }
