--- a/Website/wwwroot/Resources/css/chat.css
+++ b/Website/wwwroot/Resources/css/chat.css
@@ -115,4 +115,30 @@
 #input:focus {
     border-color: gray;
 }
-
+.generated_message {
+    background: transparent;
+}
+.day {
+    display: flex;
+    max-width: 100%;
+    margin: 0;
+    white-space: nowrap;
+    color: gray;
+    opacity: .5;
+}
+.day:before {
+content: "";
+width: 100%;
+height: 1px;
+background: gray;
+margin: auto 10px auto 0;
+opacity: .5;
+}
+.day:after {
+content: "";
+width: 100%;
+height: 1px;
+background: gray;
+margin: auto 0 auto 10px;
+opacity: .5;
+}
