--- a/Website/wwwroot/Resources/css/chats.css
+++ b/Website/wwwroot/Resources/css/chats.css
@@ -42,6 +42,7 @@
     height: 100%;
     border-radius: 6px;
     background: rgb(180, 180, 180);
+    overflow: hidden;
 }
 .chat_icon {
     height: 100%;
