--- a/Website/Views/Messenger/Base/ChatView.cshtml
+++ b/Website/Views/Messenger/Base/ChatView.cshtml
@@ -28,8 +28,11 @@ else
         const child = element.documentElement.querySelector('body').firstChild;
         return child;
     };
+    function ScrollHistoryToNewest() {
+        document.getElementById('history').scrollTo(0, document.getElementById('history').scrollHeight);
+    }
 
-    document.getElementById('history').scrollTo(0, document.getElementById('history').scrollHeight);
+    ScrollHistoryToNewest();
     
     var privateconnection;
     function initPrivateSignalR() {
@@ -56,6 +59,7 @@ else
                 success: function(messages) {
                     var view = document.createElementFromString(messages);
                     history.appendChild(view);
+                    ScrollHistoryToNewest();
 
                 }
             });
